# 3D-Annotation-Software

./: CMakeLists.txt  config.json
camfiles/: pot1.cam  pot2.cam  pot3.cam  pot4.cam  pot5.cam  pot6.cam
include/: Header.h  myRenderView.h  pointDefinition.h  pointWaveLength.h
src/: DrawPolygon.hpp  MyRenderView.cpp  Source.cpp  visualizerConfig.hpp
